tests/EnvironmentTests/data/DupFuncArgsTest.xpl
node[] f(integer x, integer x) {}
